|
| CHANGELOG
|
+



############################################################################################





Version 1.1
	- Version 1.1.0

Developer Version
	- 1.0.1 Development
	- 1.0.2 Development
	- 1.0.3 Development
	- 1.0.4 Development
	- 1.0.5 Development
	- 1.0.6 Development
	- 1.0.7 Development
	- 1.1.0 Development

Building Steps: 2410



 Version 1.1.0 Development
-----------------------------------------------------------------

 - bug #0000122: login on frontpage
 - bug #0000125: .xml error after installation
 - bug #0000105: cross-site scripting security bug
 - bug #0000140: feeds with special chars
 - bug #0000138: feature: regenerate feeds on saving new news
 - bug #0000116: newsletter emails in html
 - bug #0000129: editing topmenu internet links
 - bug #0000144: editing news from frontpage

 - security fixed: cross-site scripting security bug

 - bug fixed: mediabrowser bug in subfolders
 - bug fixed: save faq item error (if save without a position number)
 - bug fixed: [XML DB] genearting menu (with svn folders)
 - bug fixed: [XML DB] position order in guestbook

 - changed: some framework class improvements
 - changed: improvements on the backend layout
 - changed: usermanagement and profile now with the new framework objects
 - changed: dutch language update
 - changed: added all new functionality for the postgresql database

 - added: captcha comment check for the image comments
 - added: possibillity to make a own target to the side and topmenu links
 - added: export contact information in the adressbook as a vCard
 - added: import new contacts via vCards
 - added: news has now a frontpage visibility
 - added: the pdf link in the footer can now be disabled
 - added: more metadata settings
 - added: yahoo search option to the search result page
 - added: test environment, for the testing phase if page is offline
 - added: content language selector to footer
 - added: change page language per link (language selector)



