@@ -10,7 +10,6 @@
 | toendaCMS documentation
 |
 | File:		mod_documentation.php
-| Version:	0.0.4
 |
 +
 */
@@ -18,6 +17,17 @@
 
 defined('_TCMS_VALID') or die('Restricted access');
 
+
+/**
+ * toendaCMS documentation
+ *
+ * This is used as a documents wiki wrapper.
+ *
+ * @version 0.0.4
+ * @author	Jonathan Naumann <jonathan@toenda.com>
+ * @package toendaCMS
+ * @subpackage toendaCMS Backend
+ */
 
 
 echo tcms_html::bold(_DOCU_TITLE);
@@ -30,12 +40,10 @@ echo '<iframe src="http://wiki.toendacms.com/index.php/Main_Page" class="tcms_he
 $lang_xml = new xmlparser('../../'.$tcms_administer_site.'/tcms_global/var.xml', 'r');
 $tcms_lang = $lang_xml->read_section('global', 'lang');
 
-if(file_exists('documentation/documentation_'.$tcms_lang.'.html'))
-{
+if(file_exists('documentation/documentation_'.$tcms_lang.'.html')) {
 	include('documentation_'.$tcms_lang.'.html');
 }
-else
-{
+else {
 	include('documentation_english_EN.html');
 }
 
