@@ -8,7 +8,7 @@
 	<status>RC1</status>
 	<status>Beta</status>
 	
-	<build>Build 2410</build>
+	<build>Build 2415</build>
 	<name>toendaCMS</name>
 	<tagline>Your ideas ahead</tagline>
 	<release_date>15.01.2007 - 22:55</release_date>
